package service;

import dao.ItemDao;
import dao.impl.ItemDaoImpl;
import model.Item;
import util.ValidationUtils;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.List;
import java.util.stream.Collectors;

/**
 * Item service class - handles item-related business logic
 */
public class ItemService {

    private final ItemDao itemDao;
    private static final DateTimeFormatter DATE_FORMATTER = 
        DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
    
    public ItemService() {
        this(new ItemDaoImpl());
    }

    public ItemService(ItemDao itemDao) {
        this.itemDao = itemDao;
    }
    
    /**
     * Publish item
     * @param sellerId Seller ID
     * @param title Title
     * @param description Description
     * @param price Price
     * @param category Category
     * @param imageUrl Image URL
     * @return Publish result message
     */
    public String publishItem(Long sellerId, String title, String description, 
                              double price, String category, String imageUrl) {  
        // Validate sellerId
        if (sellerId == null) {
            return "Seller ID cannot be null. Please log in first.";
        }
        
        // Validate title
        if (!ValidationUtils.isNotEmpty(title)) {
            return "Item title cannot be empty";
        }
        
        // Validate price
        if (!ValidationUtils.isValidPrice(price)) {
            return "Item price must be greater than 0";
        }
        
        // Create item
        Item item = new Item();
        item.setSellerId(sellerId);
        item.setTitle(title);
        // Ensure description is not null
        item.setDescription(description != null ? description : "");
        item.setPrice(price);
        // Ensure category is not null
        item.setCategory(category != null ? category : "Other");
        // Ensure imageUrl is not null
        item.setImageUrl(imageUrl != null && !imageUrl.trim().isEmpty() ? imageUrl : null);
        item.setActive(true);
        item.setCreatedTime(LocalDateTime.now().format(DATE_FORMATTER));
        
        try {
            System.out.println("Attempting to save item: title=" + title + ", sellerId=" + sellerId);
            itemDao.save(item);
            System.out.println("Item saved successfully");
            return null; // Success returns null
        } catch (RuntimeException e) {
            System.err.println("Error saving item: " + e.getMessage());
            e.printStackTrace();
            return "Failed to publish item: " + e.getMessage();
        }
    }
    
    /**
     * Get all active items
     * @return Item list
     */
    public List<Item> getAllActiveItems() {
        return itemDao.findAll().stream()
            .filter(Item::isActive)
            .collect(Collectors.toList());
    }
    
    /**
     * Get all items (including inactive)
     * @return Item list
     */
    public List<Item> getAllItems() {
        return itemDao.findAll();
    }
    
    /**
     * Get item by ID
     * @param itemId Item ID
     * @return Item object
     */
    public Item getItemById(Long itemId) {
        return itemDao.findById(itemId);
    }
    
    /**
     * Get items by seller
     * @param sellerId Seller ID
     * @return Item list
     */
    public List<Item> getItemsBySeller(Long sellerId) {
        return itemDao.findBySellerId(sellerId);
    }
    
    /**
     * Search items
     * @param keyword Keyword
     * @return Item list
     */
    public List<Item> searchItems(String keyword) {
        if (keyword == null || keyword.trim().isEmpty()) {
            return getAllActiveItems();
        }
        return itemDao.search(keyword).stream()
            .filter(Item::isActive)
            .collect(Collectors.toList());
    }
    
    /**
     * Search items with advanced filters
     * @param keyword Keyword
     * @param minPrice Min price
     * @param maxPrice Max price
     * @param category Category
     * @param sortBy Sort order
     * @return Item list
     */
    public List<Item> searchItems(String keyword, Double minPrice, Double maxPrice, String category, String sortBy) {
        return itemDao.searchItems(keyword, minPrice, maxPrice, category, sortBy);
    }

    /**
     * Filter items by category
     * @param category Category
     * @return Item list
     */
    public List<Item> getItemsByCategory(String category) {
        return getAllActiveItems().stream()
            .filter(item -> category.equals(item.getCategory()))
            .collect(Collectors.toList());
    }
    
    /**
     * Update item
     * @param item Item object
     * @return Update result message
     */
    public String updateItem(Item item) {
        if (!ValidationUtils.isNotEmpty(item.getTitle())) {
            return "Item title cannot be empty";
        }
        
        if (!ValidationUtils.isValidPrice(item.getPrice())) {
            return "Item price must be greater than 0";
        }
        
        itemDao.update(item);
        return null;
    }
    
    /**
     * Deactivate item
     * @param itemId Item ID
     */
    public void deactivateItem(Long itemId) {
        Item item = itemDao.findById(itemId);
        if (item != null) {
            item.setActive(false);
            itemDao.update(item);
        }
    }
    
    /**
     * Activate item
     * @param itemId Item ID
     */
    public void activateItem(Long itemId) {
        Item item = itemDao.findById(itemId);
        if (item != null) {
            item.setActive(true);
            itemDao.update(item);
        }
    }
    
    /**
     * Delete item
     * @param itemId Item ID
     */
    public void deleteItem(Long itemId) {
        itemDao.delete(itemId);
    }
    
    /**
     * Check if user is the item owner
     * @param itemId Item ID
     * @param userId User ID
     * @return Whether is owner
     */
    public boolean isItemOwner(Long itemId, Long userId) {
        Item item = itemDao.findById(itemId);
        return item != null && item.getSellerId().equals(userId);
    }
}
