@startuml Principle_Dependency_Inversion

title Design Principle - Dependency Inversion Principle (DIP)

' ========== Classic Blue Style (Matching Sequence Diagrams) ==========
skinparam backgroundColor White
skinparam roundcorner 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam class {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
    AttributeFontName Arial
    AttributeFontColor Black
    ArrowColor #282828
}

skinparam interface {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam package {
    BackgroundColor White
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam note {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontName Arial
}

skinparam classAttributeIconSize 0

package "High-Level Module" {
    class ItemService {
        - itemDao : ItemDao
        ==
        **Depends on Abstraction**
        ..
        + ItemService()
        + ItemService(ItemDao)
        --
        + getItemById(Long) : Item
        + publishItem(...) : String
        + getAllActiveItems() : List<Item>
        + searchItems(...) : List<Item>
    }
    
    class OrderService {
        - orderDao : OrderDao
        - itemDao : ItemDao
        ==
        **Depends on Abstractions**
        ..
        + createOrder(...) : String
        + updateOrderStatus(...) : String
    }
}

package "Abstraction Layer" {
    interface ItemDao <<interface>> {
        + findById(Long) : Item
        + findAll() : List<Item>
        + save(Item) : void
        + update(Item) : void
        + delete(Long) : void
    }
    
    interface OrderDao <<interface>> {
        + findById(Long) : Order
        + findByBuyerId(Long) : List<Order>
        + save(Order) : void
        + update(Order) : void
    }
}

package "Low-Level Module" {
    class ItemDaoImpl {
        ==
        **Implements Abstraction**
        ..
        + findById(Long) : Item
        + findAll() : List<Item>
        + save(Item) : void
        + update(Item) : void
        + delete(Long) : void
        --
        - mapRow(ResultSet) : Item
    }
    
    class OrderDaoImpl {
        ==
        **Implements Abstraction**
        ..
        + findById(Long) : Order
        + findByBuyerId(Long) : List<Order>
        + save(Order) : void
        + update(Order) : void
        --
        - mapRow(ResultSet) : Order
    }
}

package "Test Module" {
    class MockItemDao <<Mock>> {
        ==
        **Test Double**
        ..
        Mocked behavior
        for unit testing
    }
}

' Relationships - High-level depends on abstraction
ItemService --> ItemDao : depends on
OrderService --> OrderDao : depends on
OrderService --> ItemDao : depends on

' Low-level implements abstraction
ItemDaoImpl ..|> ItemDao : implements
OrderDaoImpl ..|> OrderDao : implements
MockItemDao ..|> ItemDao : implements

note top of ItemService
  **High-Level Module**
  Contains business logic
  Does NOT depend on
  low-level implementation
end note

note right of ItemDao
  **Abstraction**
  Both high-level and
  low-level modules
  depend on this interface
end note

note bottom of ItemDaoImpl
  **Low-Level Module**
  Concrete implementation
  Depends on abstraction
  (implements interface)
end note

note right of MockItemDao
  **Testability Benefit**
  Mock can be injected
  for unit testing without
  real database
end note

@enduml

